# Minecraft-Calculator-CLI

./: .gitignore  LICENSE  README.md  pyproject.toml  test_recipes.json
doc/: detailed-design.md  high-level-design.md  prompt.md  proposal.md  vibe_coding_prompt.md
doc/design/: Architecture Design.md
doc/tasks/: calculator.md  cli.md  exceptions.md  formatter.md  inventory.md  progress.md  recipe_manager.md  strategies.md  yaml_loader.md
minecraft_calculator/: cli.py  interactive_cli.py
minecraft_calculator/core/: calculator.py  config_manager.py  data_manager.py  event_system.py  inventory.py  json_manager.py  recipe_manager.py  search_index.py  strategies.py
minecraft_calculator/data/: app_config.json  config.json  inventory.json  inventory.yaml
minecraft_calculator/data/app_config.json.backups/: 20260523_073006.json  20260523_073010.json
minecraft_calculator/data/inventory.json.backups/: 20260523_070833.json  20260523_071416.json  20260523_071832.json
minecraft_calculator/data/recipes/: vanilla.json  vanilla.yaml
minecraft_calculator/data/recipes/mods/: create.json  create.yaml
minecraft_calculator/exceptions/: __init__.py
minecraft_calculator/utils/: formatter.py  json_loader.py  yaml_loader.py
tests/: test_calculator.py  test_event_system.py  test_inventory.py  test_recipe_manager.py
