[project]
name = "MCC"
version = "1.0.0"
description = "Minecraft 材料计算器 - 计算制作物品所需的材料，支持库存管理和模组扩展"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LIBOH"}
]
keywords = ["minecraft", "calculator", "material", "recipe", "inventory"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.4.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "mypy>=1.0.0",
    "ruff>=0.2.0",
]

[project.scripts]
mcc = "minecraft_calculator.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["minecraft_calculator"]
include = [
  "data/**",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
